<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:orientation="vertical"
             android:id="@+id/settings_activity"
             tools:context="com.leanovate.moodly.app.Settings">

    <TableRow android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">
        <TextView
                android:text="@string/moodlyIdLabel"
                android:id="@+id/moodlyIdLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/moodlyIdValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Enter moodly ID"/>
    </TableRow>

    <TableRow android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">
        <TextView
                android:text="@string/hostLabel"
                android:id="@+id/hostLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/hostValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Enter host"/>
    </TableRow>

    <TableRow android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">
        <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:id="@+id/updateSettings"
                android:text="@string/button_update"
                android:onClick="updateButton"
                />
    </TableRow>


</TableLayout>

