<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/moodViewFlipper"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            >
           <ImageView
                android:id="@+id/happy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/happy_5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/fine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/happy_4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/neutral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/happy_3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/sad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/happy_2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/frustrated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/happy_1" />
        </LinearLayout>

    </ViewFlipper>
</LinearLayout>
