<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.leanovate.moodly.DisplayVoteStatsActivity">

    <TableRow>
    <TextView
        android:text="@string/voteLabel"
        android:id="@+id/vote_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        <TextView
        android:id="@+id/vote_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </TableRow>
    <TableRow>
    <TextView
        android:text="@string/iterationLabel"
        android:id="@+id/iteration_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        <TextView

        android:id="@+id/iteration_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </TableRow>
</TableLayout>
